Ensure center aligned loader

--- a/src/components/ScreenLoader/styles/ScreenLoader.scss
+++ b/src/components/ScreenLoader/styles/ScreenLoader.scss
@@ -3,16 +3,18 @@
   height: calc(100vh - 1.5rem);
   position: relative;
   display: grid;
+  justify-items: center !important;
+  align-items: center;
+
+  text-align: center;
 
   .loader-container {
-    // display: grid;
-    // justify-items: center;
-    // width: 100%;
-    // height: 100%;
-
-    align-self: center;
+    display: grid;
+    justify-items: center !important;
+    align-items: center;
+    text-align: center !important;
     .dots-container {
-      justify-self: center;
+      justify-self: center !important;
       width: 150px;
       display: grid;
       justify-items: start;
